@@ -1,8 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.601 2006/02/20 18:15:17 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.602 2006/02/23 21:01:02 agaffney Exp $
 
+  23 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  only keep a 1000 line 'scrollback' buffer for the compile output and log file
 
   20 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
